--- a/guides/link/hosted.mdx
+++ b/guides/link/hosted.mdx
@@ -8,12 +8,8 @@ description: "Simple redirect-based OnlyFans authentication"
 Hosted Mode provides the simplest integration path for OnlyFans authentication. Users are redirected to OFAuth's secure authentication pages, reducing your security burden while providing a seamless authentication experience.
 
 <Info>
-	**Available Immediately**: Hosted Mode is available to all users without
-	requiring approval.
-</Info>
-
-<Info>
-	**Want a Better UX?** For a more seamless experience without redirects, check out our [Link Embed Library](/guides/link/embed) which provides popup-based authentication that keeps users in your application.
+	Prefer a popup experience? Use our [Link Embed Library](/guides/link/embed) to keep users
+	in your app rather than redirecting them away from your site.
 </Info>
 
 
@@ -71,10 +67,11 @@ https://api.ofauth.com/v2/link
 
 ## Authentication
 
-All requests require your API key:
+All requests require both your API key and platform identifier headers:
 
 ```http
 apikey: YOUR_API_KEY
+x-platform-id: YOUR_PLATFORM_ID
 ```
 
 ## Core Endpoints
@@ -92,18 +89,15 @@ POST /v2/link/init
 **Headers:**
 
 - `apikey`: Your API key (required)
+- `x-platform-id`: Your OFAuth platform identifier (required)
 - `Content-Type`: application/json
 
 **Request Body:**
 
 ```json
 {
-	"mode": "hosted",
-	"hosted": {
-		"returnUrl": "https://yourapp.com/cancel",
-		"successUrl": "https://yourapp.com/success",
-		"skipApproval": false
-	},
+	"successUrl": "https://yourapp.com/success?connection={CONNECTION_ID}",
+	"returnUrl": "https://yourapp.com/cancel",
 	"clientReferenceId": "user_123",
 	"connectionId": "conn_existing_123",
 	"options": {
@@ -116,13 +110,30 @@ POST /v2/link/init
 
 | Parameter                  | Type    | Required | Description                                                      |
 | -------------------------- | ------- | -------- | ---------------------------------------------------------------- |
-| `mode`                     | string  | No       | Set to "hosted" (default)                                        |
-| `hosted.returnUrl`         | string  | No       | URL to redirect to on cancellation (recommended)                 |
-| `hosted.successUrl`        | string  | No       | URL to redirect to on success (recommended)                      |
-| `hosted.skipApproval`      | boolean | No       | Skip approval step (requires special permission, default: false) |
+| `mode`                     | string  | No       | Optional. Defaults to hosted—leave unset unless OFAuth has approved a custom flow |
+| `returnUrl`                | string  | No       | URL to redirect to on cancellation (recommended)                 |
+| `successUrl`               | string  | No       | URL to redirect to on success (supports `{CONNECTION_ID}` placeholder) |
 | `clientReferenceId`        | string  | No       | Your internal user identifier for webhook correlation            |
 | `connectionId`             | string  | No       | Existing connection ID to reconnect to                           |
 | `options.returnRawSession` | boolean | No       | Return raw session data (requires approval, default: false)      |
+
+<Note>
+	`options.returnRawSession` is an advanced setting that requires approval from
+	the OFAuth team. Reach out to [support@ofauth.com](mailto:support@ofauth.com)
+	with your use case before enabling it in production.
+</Note>
+
+<Tip>
+	Include `{CONNECTION_ID}` anywhere in your success URL to have it replaced with
+	the connection identifier that was just created. This makes it easy to
+	validate the redirect on your side without extra API calls.
+</Tip>
+
+<Info>
+	`mode` is optional. Omit it to use hosted mode automatically. Only specify a
+	custom value if OFAuth has enabled a programmatic integration for your
+	account.
+</Info>
 
 **Response:**
 
@@ -204,6 +215,7 @@ DELETE /v2/link/{clientSecret}
 **Headers:**
 
 - `apikey`: Your API key (required)
+- `x-platform-id`: Your OFAuth platform identifier (required)
 
 **Response:**
 
@@ -226,14 +238,12 @@ const initResponse = await fetch("https://api.ofauth.com/v2/link/init", {
 	method: "POST",
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"Content-Type": "application/json"
 	},
 	body: JSON.stringify({
-		mode: "hosted",
-		hosted: {
-			returnUrl: "https://yourapp.com/cancel",
-			successUrl: "https://yourapp.com/success"
-		},
+		successUrl: "https://yourapp.com/success?connection={CONNECTION_ID}",
+		returnUrl: "https://yourapp.com/cancel",
 		clientReferenceId: "user_123"
 	})
 })
@@ -248,14 +258,12 @@ response = requests.post(
     "https://api.ofauth.com/v2/link/init",
     headers={
         "apikey": "YOUR_API_KEY",
+        "x-platform-id": "YOUR_PLATFORM_ID",
         "Content-Type": "application/json"
     },
     json={
-        "mode": "hosted",
-        "hosted": {
-            "returnUrl": "https://yourapp.com/cancel",
-            "successUrl": "https://yourapp.com/success"
-        },
+        "successUrl": "https://yourapp.com/success?connection={CONNECTION_ID}",
+        "returnUrl": "https://yourapp.com/cancel",
         "clientReferenceId": "user_123"
     }
 )
@@ -271,14 +279,12 @@ $response = file_get_contents("https://api.ofauth.com/v2/link/init", false, stre
         'method' => 'POST',
         'header' => [
             'apikey: YOUR_API_KEY',
+            'x-platform-id: YOUR_PLATFORM_ID',
             'Content-Type: application/json'
         ],
         'content' => json_encode([
-            'mode' => 'hosted',
-            'hosted' => [
-                'returnUrl' => 'https://yourapp.com/cancel',
-                'successUrl' => 'https://yourapp.com/success'
-            ],
+            'successUrl' => 'https://yourapp.com/success?connection={CONNECTION_ID}',
+            'returnUrl' => 'https://yourapp.com/cancel',
             'clientReferenceId' => 'user_123'
         ])
     ]
@@ -306,18 +312,25 @@ When users complete or cancel authentication, they'll be redirected to your spec
 <CodeGroup>
 
 ```javascript Success Handler
-// User visits: https://yourapp.com/success?session=cs_abc123def456
+// User visits: https://yourapp.com/success?connection=conn_abc123def456&session=cs_abc123def456
 
 const urlParams = new URLSearchParams(window.location.search)
+const connectionId = urlParams.get("connection")
 const sessionId = urlParams.get("session")
+
+
+if (connectionId) {
+	// Store connection ID for future API calls
+	localStorage.setItem("connectionId", connectionId)
+}
 
 if (sessionId) {
 	// Verify the session server-side
 	const response = await fetch(`/api/verify-session?session=${sessionId}`)
-	const { connectionId } = await response.json()
+	const { connectionId: verifiedConnectionId } = await response.json()
 
-	// Store connection ID for future API calls
-	localStorage.setItem("connectionId", connectionId)
+	// Update connection ID using the verified value
+	localStorage.setItem("connectionId", verifiedConnectionId)
 }
 ```
 
@@ -345,7 +358,8 @@ app.get("/api/verify-session", async (req, res) => {
 
 	const response = await fetch(`https://api.ofauth.com/v2/link/${session}`, {
 		headers: {
-			apikey: process.env.OFAUTH_API_KEY
+			apikey: process.env.OFAUTH_API_KEY,
+			"x-platform-id": process.env.OFAUTH_PLATFORM_ID
 		}
 	})
 
@@ -374,7 +388,10 @@ def verify_session():
 
     response = requests.get(
         f"https://api.ofauth.com/v2/link/{session_id}",
-        headers={"apikey": os.getenv("OFAUTH_API_KEY")}
+        headers={
+            "apikey": os.getenv("OFAUTH_API_KEY"),
+            "x-platform-id": os.getenv("OFAUTH_PLATFORM_ID")
+        }
     )
 
     session_data = response.json()
@@ -524,8 +541,8 @@ async function addNewAccount(userId) {
 ## Testing
 
 <Info>
-	**Development Mode**: Use test API keys for development. Test sessions work
-	with demo credentials that are provided on the hosted authentication page.
+  **Development Mode**: Use test API keys for development. Test sessions work with demo
+  credentials that are provided on the hosted authentication page.
 </Info>
 
 ## Next Steps
@@ -537,7 +554,9 @@ async function addNewAccount(userId) {
 	<Card title="Webhooks" icon="webhook" href="/api-reference/account/overview">
 		Get notified of connection events
 	</Card>
-	<Card title="API Mode" icon="code" href="/guides/link/api-mode">
-		Need more control? Try programmatic authentication
-	</Card>
 </CardGroup>
+
+<Info>
+  Looking for a fully custom experience? Programmatic flows are available by request.
+  Reach out to [support@ofauth.com](mailto:support@ofauth.com) with your use case.
+</Info>
